--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,8 +3,18 @@
     <div class="navbar__left"></div>
     <h1 class="navbar__title">{{ title }}</h1>
     <div class="navbar__links">
-      <a class="navbar__link" routerLink="/calculator" routerLinkActive="navbar__link--active">Calculator</a>
-      <a class="navbar__link" routerLink="/tax-bands" routerLinkActive="navbar__link--active">Tax Bands</a>
+      <a
+        class="navbar__link"
+        routerLink="/calculator"
+        routerLinkActive="navbar__link--active"
+        >Calculator</a
+      >
+      <a
+        class="navbar__link"
+        routerLink="/tax-rules"
+        routerLinkActive="navbar__link--active"
+        >Tax Rules</a
+      >
     </div>
   </div>
 </nav>
