--- a/frontend/src/app/tax-bands/tax-bands.component.html
+++ b/frontend/src/app/tax-bands/tax-bands.component.html
@@ -32,7 +32,7 @@
       <div class="tax-bands__container">
         <div class="tax-bands__header">
           <div class="tax-bands__header-cell">Tax Band</div>
-          <div class="tax-bands__header-cell">Annual Salary (£)</div>
+          <div class="tax-bands__header-cell">Salary</div>
           <div class="tax-bands__header-cell">Tax Rate</div>
           <div class="tax-bands__header-cell tax-bands__header-cell--actions">Actions</div>
         </div>
@@ -46,6 +46,7 @@
             >
           </div>
           <div class="tax-bands__cell">
+            £
             <input
               class="tax-bands__input tax-bands__input--number"
               type="number"
