--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -27,7 +27,7 @@
   padding: 20px 15px;
   display: inline-block;
   transition: background-color 0.3s;
-  whitespace: nowrap;
+  white-space: nowrap;
 }
 
 .navbar__link:hover {
